Start collection views backend
